--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
             <h1 class="welcome-title"> Welcome to</h1>
             <h1 class="mentora-title"> Mentora,</h1>
             <p class="slogan">"Empowering you to live a healthier life through expert care and personalized health plans"</p>
+            <p class="slogan">"Empowering you to live a healthier life through expert care and personalized health plans" </p>
             <a href="#" class="add-to-calendar">Add to Calendar</a>
         </main>
     </body>
