--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
         .header {
             position: fixed;
             top: 0;
-            left: 0;
-            right: 0;
+            width: 100%;
             background: rgba(255, 255, 255, 0.9);
             backdrop-filter: blur(10px);
             -webkit-backdrop-filter: blur(10px);
             border-bottom: 1px solid rgba(0, 0, 0, 0.1);
             padding: 8px 0;
             z-index: 1000;
+            position: fixed;
         }
         
         .nav-container {
@@ -167,6 +167,10 @@
             opacity: 0.45;
             z-index: -1;
         }
+        
+        .subu-bubu {
+            height: 1000px;
+        }
     </style>
     </head>
 
@@ -194,6 +198,7 @@
                 <p class="slogan">"Empowering you to live a healthier life through expert care and personalized health plans"</p> <span class="add-to-calendar">Add to Calendar</span>
             </main>
         </div>
+        <div class="subu-bubu"></div>
     </body>
 
 </html>
