--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
 <body>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Merriweather:wght@300;400;500&display=swap');
         * {
             margin: 0;
             padding: 0;
@@ -25,9 +28,9 @@
             position: fixed;
             top: 0;
             width: 100%;
-            background: rgba(255, 255, 255, 0.9);
             backdrop-filter: blur(10px);
             -webkit-backdrop-filter: blur(10px);
+            background: rgba(255, 255, 255, 0.1);
             border-bottom: 1px solid rgba(0, 0, 0, 0.1);
             padding: 8px 0;
             z-index: 1000;
