--- a/index.html
+++ b/index.html
@@ -189,6 +189,11 @@
             font-weight: 600;
             color: #c53030;
         }
+        
+        sup {
+            vertical-align: super;
+            font-size: 80%;
+        }
     </style>
     </head>
 
@@ -216,6 +221,17 @@
                 <a class="add-to-calendar">Add to Calendar</a>
             </main>
         </div>
+        <section class="brain-section">
+            <div class="brain-container">
+                <span class="brian-icon">🧠</span> <br>
+                <h2 class="brain-title">Stay close<br> to your mind.</h2>
+
+                <p class="brian-description">
+                    Your thoughts flow through you thousands of times per day. Thought by thought, your mental patterns and responses to life's challenges are <span class="highlight-brai0">crucial indicators of your overall wellbeing</span>. <br>With
+                    innovative features like mood tracking, personalized therapy sessions,24/7 crisis support, and direct access to licensed professionals, Mentora gives you an invaluable view of your mental health journey.
+                </p>
+            </div>
+        </section>
         <div class="subu-bubu"></div>
     </body>
 
